fixing exercise from Week05 lab (10/10 solution)